--- a/RELEASE-NOTES
+++ b/RELEASE-NOTES
@@ -6,7 +6,7 @@
         - removed all the complexity for setting up handlers for printing
           a subroutine utility name.  Too much complexity.
         - It now tries to prepend a program-name if it is available.
-        - As for any sub-routine name you eant printed, if you want to
+        - As for any sub-routine name you want printed, if you want to
           have one, prepend your message you send. eg:
                 logging.debug("function-name: my debug message")
         - Now anything above INFO and DEBUG go to stderr. - otherwise stdout.
@@ -38,9 +38,28 @@
     cli_logging/logging_utils.py:
         - rewrote setup_cli_logging() to use colorlog module to simplify
           things, give us the ability to color the entire message instead
-          of just the message severity level, and get rid of he ugly
+          of just the message severity level, and get rid of the ugly
           encompassing colored block around some levels, like CRITICAL.
           Also, the colors are now given in English instead of ugly ANSI
           color codes.
           Does require installing colorlog module though.
           Added try/except block for imports to catch missing modules.
+
+0.5.0   Aug 20, 2025:
+    pyproject.py:
+        - changed name from cli_logging to cli_logging_moxad for possible
+          inclusion into PyPi.
+          (since all my packages are searchable with 'moxad')
+        - added:
+            [project.urls]
+            Homepage = "https://github.com/rjwhite/cli-logging"
+    cli_logging/logging_utils.py, testing/test.py:
+        - fixed help message in __main__ for option --nocolor
+          added short versions of --debug (-d) and --nocolor (-n)
+        - changed import from cli_logging to cli_logging_moxad
+    README.txt, README.md:
+        - fixed typos
+        - added short-form options in code sample, fixed help for --nocolor
+        - changed import from cli_logging to cli_logging_moxad
+    RELEASE-NOTES:
+        - fixed typos
